--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,8 @@ html, body {
 }
 
 .uberAccordion>li>h4 {
+    display: flex !important;
+    justify-content: center;
     margin: 0;
     font-size: 16px;
     padding: 5px;
